<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1B Finance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginPrompt">Enter Username and Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="main_app_logo">main app logo</string>
    <string name="register">Register</string>
    <string name="welcome_screen_image">welcome_screen_image</string>
    <string name="login_success">Login Successful</string>
    <string name="blank"></string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="register_title">Register</string>
    <string name="enter_name">Name</string>
    <string name="create_account">Create My Account</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="accounts_overview_title">Accounts Overview</string>
    <string name="view_accounts_button">View Accounts</string>
    <string name="create_account_button">Create Account</string>
    <string name="title_activity_account_creation">AccountCreationActivity</string>
    <string name="acct_balance">Balance</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="dollars">$</string>
    <string name="account_name">Account Name: </string>
    <string name="display_name">Display Name</string>
    <string name="title_activity_trans_page">TransPageActivity</string>
    <string name="account_name_holder">Account Name</string>
    <string name="balance">Balance: </string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="rate">Rate</string>
    <string name="i_rate">Interest Rate</string>
    <string name="title_activity_deposit">DepositActivity</string>
    <string name="withdrawal_info">Enter Withdrawal Information</string>
    <string name="amount">Amount</string>
    <string name="title_activity_withdrawal">WithdrawalActivity</string>
    <string name="expense_cate">Expense Category</string>
    <string name="type">Type</string>
    <string name="withdraw">Withdraw</string>
    <string name="reason">Reason</string>
    <string name="category">Category</string>
    <string name="effective_date">Effective Date</string>
    <string name="transaction">Transaction</string>
    <string name="source">Source</string>

    <string-array name="Categories">
        <item>Food</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Clothing</item>
        <item>Other</item>
    </string-array>

    <string name="Category">Category</string>
    <string name="spending_report_title">Spending Category Report</string>
    <string name="food">Food</string>
    <string name="rent">Rent</string>
    <string name="entertainment">Entertainment</string>
    <string name="clothing">Clothing</string>
    <string name="other">Other</string>
    <string name="total">Total</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="date_range">Select Date Range</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="title_activity_report_date_select">Report Date Select</string>
    <string name="title_activity_spending_report">Spending Report</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="loading">LOADING....</string>

</resources>
