<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TransPageActivity" >
        
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/spendingReportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name" />

        <TextView
            android:id="@+id/account_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance" />

        <TextView
            android:id="@+id/balance_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <Button
            android:id="@+id/withdrawalButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal" />

        <Button
            android:id="@+id/depositButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/deposit" />
    </TableRow>

</TableLayout>