<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/benFranklin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.28"
        android:scaleType="centerCrop"
        android:src="@drawable/money" android:contentDescription="@string/welcome_screen_image"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>